# morning-call

./: .gitignore  README.md  pyproject.toml
scripts/: run.sh
src/morning_call/: config.py  feeds.py  main.py  summarizer.py  tts.py
